# ChangeLog for media-video/x264-encoder
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

x264-encoder-9999 (10 Jun 2010)

  06 Jan 2011; Nikoli <nikoli@lavabit.com> x264-encoder-9999.ebuild,
  -files/x264-encoder-nolib-20101029.patch,
  -files/x264-encoder-nolib-static-20101029.patch,
  +files/x264-encoder-nolib-20101130.patch,
  +files/x264-encoder-nolib-static-20101130.patch:
  fix USE threads, patches, cosmetics

  03 Nov 2010; Nikoli <nikoli@lavabit.com> x264-encoder-9999.ebuild,
  -files/x264-encoder-nolib-20100610.patch,
  -files/x264-encoder-nolib-static-20100610.patch,
  +files/x264-encoder-nolib-20101029.patch,
  +files/x264-encoder-nolib-static-20101029.patch:
  simplified version bumping

  22 Aug 2010; Nikoli <nikoli@lavabit.com> x264-encoder-9999.ebuild:
  fix ffmpeg automagick

  10 Jun 2010; Nikoli <nikoli@lavabit.com> x264-encoder-9999.ebuild:
  Removed src_install, base.eclass has same

  10 Jun 2010; Nikoli <nikoli@lavabit.com> +x264-encoder-9999.ebuild, +metadata.xml:
  Initial live ebuild
