@@ -1,19 +1,19 @@
 diff --git a/Makefile b/Makefile
-index a66a9ee..586ee4b 100644
+index 67301fc..bc26c02 100644
 --- a/Makefile
 +++ b/Makefile
-@@ -146,8 +146,8 @@ libx264.a: .depend $(OBJS) $(OBJASM)
+@@ -146,8 +146,8 @@ $(LIBX264): .depend $(OBJS) $(OBJASM)
  $(SONAME): .depend $(OBJS) $(OBJASM) $(OBJSO)
- 	$(CC) -shared -o $@ $(OBJS) $(OBJASM) $(OBJSO) $(SOFLAGS) $(LDFLAGS)
+ 	$(LD)$@ $(OBJS) $(OBJASM) $(OBJSO) $(SOFLAGS) $(LDFLAGS)
  
--x264$(EXE): $(OBJCLI) libx264.a
--	$(CC) -o $@ $+ $(LDFLAGSCLI) $(LDFLAGS)
+-x264$(EXE): $(OBJCLI) $(LIBX264)
+-	$(LD)$@ $+ $(LDFLAGSCLI) $(LDFLAGS)
 +x264$(EXE): $(OBJCLI)
-+	$(CC) -o $@ $+ $(LDFLAGSCLI) $(LDFLAGS) `pkg-config --libs x264`
++	$(LD)$@ $+ $(LDFLAGSCLI) $(LDFLAGS) `pkg-config --libs x264`
  
- checkasm: tools/checkasm.o libx264.a
- 	$(CC) -o $@ $+ $(LDFLAGS)
-@@ -214,22 +214,7 @@ distclean: clean
+ checkasm: tools/checkasm.o $(LIBX264)
+ 	$(LD)$@ $+ $(LDFLAGS)
+@@ -209,22 +209,7 @@ distclean: clean
  
  install: x264$(EXE) $(SONAME)
  	install -d $(DESTDIR)$(bindir)
@@ -22,11 +22,11 @@ index a66a9ee..586ee4b 100644
 -	install -d $(DESTDIR)$(libdir)/pkgconfig
 -	install -m 644 x264.h $(DESTDIR)$(includedir)
 -	install -m 644 x264_config.h $(DESTDIR)$(includedir)
--	install -m 644 libx264.a $(DESTDIR)$(libdir)
+-	install -m 644 $(LIBX264) $(DESTDIR)$(libdir)
 -	install -m 644 x264.pc $(DESTDIR)$(libdir)/pkgconfig
  	install x264$(EXE) $(DESTDIR)$(bindir)
--	$(RANLIB) $(DESTDIR)$(libdir)/libx264.a
--ifeq ($(SYS),MINGW)
+-	$(if $(RANLIB), $(RANLIB) $(DESTDIR)$(libdir)/$(LIBX264))
+-ifeq ($(SYS),WINDOWS)
 -	$(if $(SONAME), install -m 755 $(SONAME) $(DESTDIR)$(bindir))
 -else
 -	$(if $(SONAME), ln -f -s $(SONAME) $(DESTDIR)$(libdir)/libx264.$(SOSUFFIX))
