@@ -4,6 +4,13 @@
 
 x264-encoder-9999 (10 Jun 2010)
 
+  27 Apr 2011; Nikoli <nikoli@lavabit.com> x264-encoder-9999.ebuild,
+  -files/x264-encoder-nolib-20101130.patch,
+  -files/x264-encoder-nolib-static-20101130.patch,
+  +files/x264-encoder-nolib-20110228.patch,
+  +files/x264-encoder-nolib-static-20110228.patch:
+  fix patch
+
   06 Jan 2011; Nikoli <nikoli@lavabit.com> x264-encoder-9999.ebuild,
   -files/x264-encoder-nolib-20101029.patch,
   -files/x264-encoder-nolib-static-20101029.patch,
